feat: Update API endpoints to version 1 for clients, orders, order items, payments, and products